cmake_minimum_required(VERSION 3.21)
project(OOPSLab)

set(CMAKE_CXX_STANDARD 14)

add_subdirectory("${PROJECT_SOURCE_DIR}/Fibonacci" "${PROJECT_SOURCE_DIR}/Fibonacci/FibonacciOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Factorial" "${PROJECT_SOURCE_DIR}/Factorial/FactorialOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/InputOutput" "${PROJECT_SOURCE_DIR}/InputOutput/InputOutputOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Operations" "${PROJECT_SOURCE_DIR}/Operations/OperationsOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Conversions" "${PROJECT_SOURCE_DIR}/Conversions/ConversionsOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/PerfectNumber" "${PROJECT_SOURCE_DIR}/PerfectNumber/PerfectNumberOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/swapNumbers" "${PROJECT_SOURCE_DIR}/swapNumbers/swapNumbersOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/FunctionOverloading" "${PROJECT_SOURCE_DIR}/FunctionOverloading/FunctionOverloadingOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Function" "${PROJECT_SOURCE_DIR}/Function/FunctionOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/Class" "${PROJECT_SOURCE_DIR}/Class/ClassOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/ArrayOfObjects" "${PROJECT_SOURCE_DIR}/ArrayOfObjects/ArrayOfObjectsOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/ArrayOfObjectsStudents" "${PROJECT_SOURCE_DIR}/ArrayOfObjectsStudents/ArrayOfObjectsStudentsOutput")
add_subdirectory("${PROJECT_SOURCE_DIR}/ArrayOfObjectsAccount" "${PROJECT_SOURCE_DIR}/ArrayOfObjectsAccount/ArrayOfObjectsAccountOutput")
